# RustGuard-System

./: ARCHITECTURE.md  COMPLETION_SUMMARY.txt  Cargo.toml  FILE_INDEX.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  SECURITY.md
src/: crypto.rs  error.rs  lib.rs  main.rs  models.rs  server_main.rs  storage.rs  sync.rs
src/client/: cli.rs  config.rs  mod.rs  sync_client.rs
src/server/: api.rs  auth.rs  db.rs  handlers.rs  mod.rs
