[package]
name = "rust_guard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure distributed file backup and sync system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"

# Web framework & API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "1.1"
jsonwebtoken = "9.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Encryption & cryptography
aes-gcm = "0.10"
argon2 = "0.5"
ring = "0.17"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6.1"
walkdir = "2.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
dialoguer = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
futures = "0.3"
bytes = "1.5"
parking_lot = "0.12"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
